ADD GoogleMap JS & GoogleMap PHP

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,5 +65,9 @@
         <script src="{{ asset('js/StatusFilter.js') }}"></script>
         <script src="{{ asset('js/EventsSearchList.js') }}"></script>
         <script src="{{ asset('js/BlocksTransitionShowEvent.js') }}"></script>
+        <script src="{{ asset('js/EventsRequest.js') }}"></script>
+        <script src="{{ asset('js/GoogleMap.js') }}"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvzT2ZgUTNbMi4jZR7sj9di7nZ1qJsMgA&callback=initMap">
+</script>
     {% endblock %}
 </html>
