--- a/templates/errors/test.html.twig
+++ b/templates/errors/test.html.twig
@@ -5,8 +5,9 @@
 {% block body %}
 
 <ul>
-    <li> {{ test }}</li>
-    <li> {{ test2 }}</li>
+        <li> {{ dump(test) }}</li>
+        <li> {{ dump(test2) }}</li>
+    
 </ul>
 
 {% endblock %}
