--- a/templates/security/passwordChange.html.twig
+++ b/templates/security/passwordChange.html.twig
@@ -7,39 +7,45 @@
         <h2>Modifier mon mot de passe</h2>
         <div class="title--line"></div>
     </div>
-    {% for message in app.flashes('wrongPassword') %}
-    <span class="error"><p>{{ message }}</p></span>
-    {% endfor %}
-    {{ form_start(passwordChangeForm) }}
-        <p>{{ form_row(passwordChangeForm.password, { 
-            'required': 'true', 
-            'label': 'Mot de passe actuel : ', 
-            'attr': {
-                'placeholder': "Mot de passe actuel" 
-                } 
-            })
-        }}</p>
-        <p>{{ form_row(passwordChangeForm.newPassword, { 
-            'required': 'true', 
-            'label': 'Nouveau mot de passe : ', 
-            'attr': {
-                'placeholder': "Nouveau mot de passe" 
-                } 
-            }) 
-        }}</p>
-        <p>{{ form_row(passwordChangeForm.confirmNewPassword, { 
-            'required': 'true', 
-            'label': 'Confirmer le nouveau mot de passe : ', 
-            'attr': {
-                'placeholder': "Confirmation nouveau mot de passe" 
-                } 
-            })    
-        }}
-        </p>
+    <div class="login-block__form">
+        {% for message in app.flashes('wrongPassword') %}
+        <span class="error"><p>{{ message }}</p></span>
+        {% endfor %}
+        {{ form_start(passwordChangeForm) }}
+            <label>Mot de passe actuel :</label>
+            <p>{{ form_row(passwordChangeForm.password, { 
+                'required': 'true', 
+                'label': ' ', 
+                'attr': {
+                    'placeholder': "Mot de passe actuel" 
+                    } 
+                })
+            }}</p>
+            <label>Nouveau mot de passe :</label>
+            <p>{{ form_row(passwordChangeForm.newPassword, { 
+                'required': 'true', 
+                'label': ' ', 
+                'attr': {
+                    'placeholder': "Nouveau mot de passe" 
+                    } 
+                }) 
+            }}</p>
+            <label>Confirmer le nouveau mot de passe :</label>
+            <p>{{ form_row(passwordChangeForm.confirmNewPassword, { 
+                'required': 'true', 
+                'label': ' ', 
+                'attr': {
+                    'placeholder': "Confirmation mot de passe" 
+                    } 
+                })    
+            }}
+            </p>
+        </div>
         <div class="btn-block">
             <p><a href="{{ path('myAccount', {'userId': app.user.id }) }}"><input type="button" class="btn" value="Retour"></a>
             <input type="submit" class="btn" value="Confirmer"></p>
         </div>
-    {{ form_end(passwordChangeForm) }}
+        {{ form_end(passwordChangeForm) }}
+    
  </div>
 {% endblock %}
