--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,30 @@ table {
 		url('/public/fonts/Alatsi/alatsi-regular-webfont.svg') format('svg'),
 }
 
+.error {
+	color: red;
+	font-weight: bold;
+}
+
+.details-text {
+	font-style: italic;
+	font-size: 0.9rem;
+}
+
+.important-text {
+	font-weight: bold;
+	font-size: 1.2rem;
+}
+
+#full-reservations {
+	background-color: rgba(148, 39, 39, 0.8);
+	color: white;
+	font-weight: bold;
+	font-size: 0.9rem;
+	text-align: center;
+	padding: 3px;
+}
+
 /* GENERAL */
 .container__body {
 	line-height: 1.5;
@@ -70,6 +94,7 @@ table {
 	-o-box-sizing: border-box;
 	box-sizing: border-box;
 	background-color: rgb(247, 248, 250);
+	position: relative;
 }
 
 .container__footer {
@@ -96,10 +121,15 @@ a {
 	color: purple;
 	text-decoration: none;
 }
+a:hover {
+	color: indigo;
+}
 
-.error {
-	color: red;
+label {
+	font-size: 0.8em;
 	font-weight: bold;
+	color: purple;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .title {
@@ -149,7 +179,9 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: rgba(104, 93, 104, 0.2);
+	background-color: rgba(104, 93, 104, 0.1);
+	box-sizing: border-box;
+	
 }
 .each-block a {
 	text-decoration: none;
@@ -159,7 +191,7 @@ a {
 	margin-bottom: 0;
 }
 .each-block:hover {
-	background-color: rgba(104, 93, 104, 0.5);
+	background-color: rgba(104, 93, 104, 0.3);
 }
 .each-block:hover .title--line {
 	width: 90%;
@@ -192,6 +224,9 @@ a {
 	width: 80%;
 	text-align: center;
 	font-size: 1em;
+}
+.header__login a {
+	color: white;
 }
 .header__login a i, .header__login a i:hover {
 	color: white;
@@ -231,14 +266,14 @@ a {
 	align-items: center;
 	position: absolute;
 	right: 10px;
-	top: 52px;
+	top: 54px;
 	z-index: 9999;
 	padding: 10px;
 	background-color: purple;
+	filter: drop-shadow(0px 10px 5px rgba(206, 182, 206, 0.4));
 	color: white;
 	font-size: 1em;
 	line-height: 1.4em;
-	border: solid 0.5px black;
 }
 
 .each-parameter {
@@ -247,7 +282,7 @@ a {
 }
 .each-parameter:hover, .each-parameter:hover a, .each-parameter:hover a i {
 	background-color: rgb(247, 137, 255);
-	color: purple;
+	color: rgb(98, 0, 98);
 	transition: 0s;
 }
 .each-parameter a, .each-parameter a i {
@@ -262,7 +297,7 @@ a {
 	width: 25%;
 	margin: 20px auto;
 	color: purple;
-	padding: 100px;
+	padding: 80px;
 	background: rgba(255, 255, 255, 0.6);
 	filter: drop-shadow(0px 10px 5px rgba(206, 182, 206, 0.4));
 	border: 1px solid rgba(70, 69, 70, 0.1);
@@ -376,6 +411,32 @@ a {
 	font-size: 25px;
 }
 
+.query {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.noEvent {
+	display: flex;
+	justify-content: center;
+	text-align: center;
+}
+
+.query_map_block {
+	width: 50%;
+}
+
+.query_map_block #map {
+	width: 80%;
+	height: 80%;
+	margin: auto;
+	margin-top: 8%;
+	border-radius: 10px;
+	border: 1px solid purple;
+}
+
 .each-event {
 	width: 0;
 	flex-direction: row;
@@ -402,28 +463,7 @@ a {
 	width: 90%;
 }
 
-#full-reservations {
-	color: rgb(148, 39, 39);
-	font-weight: bold;
-	font-size: 1.1em;
-	text-align: center;
-}
-
 /* SHOW EVENT */
-
-.social-networks__block {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	justify-items: center;
-	align-content: center;
-}
-
-.social_btn {
-	width: 60px;
-
-}
 
 .event-content {
 	display: flex;
@@ -432,7 +472,10 @@ a {
 	justify-content: space-between;
 	border: solid 1px black;
 	text-align: center;
-	position: relative;
+}
+
+.event-infos-smartphone {
+	display: none;
 }
 
 .event-description {
@@ -451,6 +494,9 @@ a {
 	display: flex;
 	flex-direction: column;
 	box-sizing: border-box;
+}
+.event-sides-block i {
+	color: purple;
 }
 
 .event-side-block {
@@ -472,6 +518,14 @@ a {
 	line-height: 2;
 }
 
+.event-side-block #map {
+	width: 80%;
+	height: 200px;
+	margin: 10px auto;
+	border-radius: 10px;
+	border: 1px solid purple;
+}
+
 .event-reservations input[type="number"] {
 	border-radius: 10px;
 	background: rgb(181, 129, 185);
@@ -489,14 +543,6 @@ a {
 }
 
 /* EVENT CREATE/EDIT FORM */
-.create-block {
-	width: 70%;
-	color: purple;
-	padding: 10px 50px;
-	margin: auto;
-	background-color: rgba(243, 151, 243, 0.3);
-	border: 1px solid rgba(102, 93, 102, 0.1);
-}
 
 .create-block__form {
 	width: 70%;
@@ -516,9 +562,6 @@ a {
 }
 .create-block__form__each--label  {
 	width: 30%;
-	font-size: 0.8em;
-	font-weight: bold;
-	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	display: inline-block;
 }
 .create-block__form__each--input {
@@ -536,11 +579,13 @@ a {
 	color: purple;
 	border-bottom: 0.5px solid purple;
 	transition: 0.25s;
+	background-color: rgba(247, 248, 250, 0.3);
 }
 .create-block__form input:focus {
 	width: 60%;
 	border-bottom: 1px solid indigo;
 	color: indigo;
+	background-color: rgba(128, 0, 128, 0.1);
 }
 /* DESCRIPTION INPUT  */
 #create_concert_description {
@@ -557,13 +602,14 @@ a {
 	color: purple;
 	transition: 0.25s;
 	border-bottom: 0.5px solid purple;
-	background: rgb(181, 129, 185);
+	background-color: rgba(247, 248, 250, 0.3);
 }
 #create_concert_description:focus {
 	width: 99%;
 	height: 200px;
 	border: 1px solid indigo;
 	color: indigo;
+	background-color: rgba(128, 0, 128, 0.1);
 	transition: 0.25s;
 }
 /* DATE INPUT  */
@@ -619,9 +665,65 @@ a {
 
     /* SMARTPHONE */
     @media all and (max-width: 600px) {
+
+		/* GÉNÉRAL */
+		.each-block {
+			width: 10px;
+			padding: 0;
+		}
+
+		.main {
+			width: 80%;
+		}
+
+		/* HEADER */
+		.header__home {
+			padding-left: 10px;
+		}
+
+		.user-parameters--active {
+			font-size: 1.2rem;
+			line-height: 1.9;
+		}
+
+		/* LOGIN & REGISTER */
+		.login-block {
+			width: 60%;
+		}
 	
 		/* EVENTS LIST */
 		.search-form-block {
 			width: 95%;
 		}
-	}
+
+		.each-event {
+			flex-direction: column;
+		}
+
+		/* SHOW EVENT */
+		.event-content {
+			flex-direction: column;
+		}
+
+		.event-description {
+			width: 100%;
+		}
+
+		.event-infos-smartphone {
+			display: inline-block;
+			background-color: rgba(247, 248, 250, 0.8);
+			filter: drop-shadow(0px 10px 5px rgba(206, 182, 206, 0.7));
+			padding: 10px;
+			margin: 0 auto 10px auto;
+			margin-bottom: 20px;
+			line-height: 1.8;
+		}
+		.event-infos-smartphone i {
+			color: purple;
+		}
+
+		.event-sides-block {
+			display: none;
+		}
+
+	} /* END SMARTPHONE */
