--- a/templates/concerts/concertsList.html.twig
+++ b/templates/concerts/concertsList.html.twig
@@ -28,37 +28,52 @@
 
   <section>
     {% if query %}
-      <div class="main query">
-        {% if concerts %}
-          {% for concert in concerts %} 
-            <div class="each-block each-event">
-              {% if concert.imagePath %}
-                <div class="each-event__image">
-                  <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
-                  <img src="/images/concerts_img/{{concert.imagePath}}" alt="{{concert.name}}" width="200">
-                  </a>
-                </div>
-              {% endif %}
-              <div class="each-event-content">
-                <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
-                <div class="each-event-content__ title">
-                  <h2>{{ concert.name }}</h2>
-                  <div class="each-event-content__ title--line"></div>
-                </div>
-                {% if concert.reservation >= concert.maxPlaces %}
-                    <div id="full-reservations"><p><span id="full-reservations">COMPLET</span></p></div>
-                {% endif %}
-                <div class="each-event-content___infos"></div>
-                <p><i class="far fa-calendar-alt"></i> {{ concert.date | date('d/m/Y') }}</p>
-                <p><i class="fas fa-map-marker-alt"></i> {{ concert.adress }}, {{ concert.city }}</p>
-                </a>
-              </div>
+      <div class="main">
+        <div class="title">
+          <h2>{{ query |upper }}</h2>
+          <div class="title--line"></div>
+        </div>
+        <div class="query">
+          {% if concerts %}
+            <input type="hidden" id="queryConcerts" value="{{ query }}">
+            <div class="query_map_block">
+              <div id="map"></div>
             </div>
-          {% endfor %}
-        {% else %}
-            <p>Il n'y a aucun concert prévu</p>
-        {% endif %}
-      </div>
+            <div class="query_events_block">
+              {% for concert in concerts %} 
+                <div class="each-block each-event" id="{{ concert.id }}">
+                  {% if concert.imagePath %}
+                    <div class="each-event__image">
+                      <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
+                      <img src="/images/concerts_img/{{concert.imagePath}}" alt="{{concert.name}}" width="200">
+                      </a>
+                    </div>
+                  {% endif %}
+                  <div class="each-event-content">
+                    <a href="{{ path('showConcert', {'id' : concert.id}) }}"> 
+                    <div class="each-event-content__ title">
+                      <h2>{{ concert.name }}</h2>
+                      <div class="each-event-content__ title--line"></div>
+                    </div>  {# each-event-content__ title #}
+                    {% if concert.reservation >= concert.maxPlaces %}
+                        <p><span id="full-reservations">COMPLET</span></p>
+                    {% endif %}
+                    <div class="each-event-content___infos">
+                      <p><i class="far fa-calendar-alt"></i> {{ concert.date | date('d/m/Y') }}</p>
+                      <p><i class="fas fa-map-marker-alt"></i> {{ concert.adress }}, {{ concert.city }}</p>
+                    </div> {# each-event-content__infos #}
+                    </a>
+                  </div> {# each-event-content #}
+                </div>  {# each-block each-event #}
+              {% endfor %}
+            </div> {# query_events_block #}
+          {% else %}
+            <div class="noEvent">
+              <p>Il n'y a aucun concert prévu</p>
+            </div>
+          {% endif %}
+        </div> {# query END #}
+      </div>  {# main END #}
     {% endif %}
   </section>
 
