--- a/templates/concerts/confirmCancelConcert.html.twig
+++ b/templates/concerts/confirmCancelConcert.html.twig
@@ -10,13 +10,13 @@
             <div class="title--line"></div>
         </div>
 
-        <h3>{{concert.name}} - <em>{{concert.date | date('d/m/Y à h:i')}}</em></h3>
-        <p><strong>Voulez-vous vraiment annuler cet événement ?</strong><br />
-        Toutes les réservations pour cet événement seront annulées et un mail informatif sera envoyé à toutes les personnes ayant une réservation pour celui-ci.</p>
+        <h3>{{concert.name}} - <span class="details-text">{{concert.date | date('d/m/Y à h:i')}}</span></h3>
+        <p><span class="error">Voulez-vous vraiment annuler cet événement ?</span></p>
+        <p><span class="details-text">(Toutes les réservations pour cet événement seront annulées et un mail informatif sera envoyé à toutes les personnes ayant une réservation pour celui-ci)</span></p>
 
         <div class="btn-block">
             <a href="{{ path('showConcert', {'id': concert.id}) }}"><input type="button" class="btn" value="Retour"></a>
-            <a href="{{ path('cancelConcert', {'id': concert.id, 'organizerToken': organizerToken, 'confirmToken': confirmToken}) }}"><input type="button" class="btn" value="Confirmer"></a>
+            <a href="{{ path('cancelConcert', {'id': concert.id, 'organizerToken': organizerToken, 'confirmToken': confirmToken}) }}"><input type="button" class="btn" value="Confirmer l'annulation"></a>
         </div>
 
     </div></section>
