--- a/templates/errors/error403.html.twig
+++ b/templates/errors/error403.html.twig
@@ -3,9 +3,12 @@
 {% block body %}
 
 <article>
-
-    <p>Erreur 403 : Vous n'avez pas l'autorisation d'accéder à ce contenu</p>
-
+    <div class="main">
+        <p><span class="error">Erreur 403</span> : Vous n'avez pas l'autorisation d'accéder à ce contenu</p>
+        <div class="btn-block">
+            <a href="{{ path('index') }}"><input type="button" class="btn" value="Retour"></a>
+        </div>
+    </div>
 </article>
 
 {% endblock %}
