--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -1,12 +1,10 @@
 {% extends 'base.html.twig' %}
-
-{% set title = "Événement introuvable" %}
-
+{% set title = 'Erreur 403' %}
 {% block body %}
 
 <article>
     <div class="main">
-        <p><span class="error">Erreur</span> : Cet événement n'existe pas ou a été supprimé</p>
+        <p><span class="error">Erreur 403</span> : Vous n'avez pas l'autorisation d'accéder à ce contenu</p>
         <div class="btn-block">
             <a href="{{ path('index') }}"><input type="button" class="btn" value="Retour"></a>
         </div>
