--- a/templates/concerts/concertForm.html.twig
+++ b/templates/concerts/concertForm.html.twig
@@ -2,10 +2,10 @@
 
 {% block body %}
 
-    <section><div class="main">
-        <div class="create-block__ title">
+    <section><div class="create-block main">
+        <div class="title">
             <h2>{{ title }}</h2>
-            <div class="create-block__ title--line"></div>
+            <div class="title--line"></div>
         </div>
         <div class="create-block__form">
             <div class="title">
