--- a/templates/concerts/concertsList.html.twig
+++ b/templates/concerts/concertsList.html.twig
@@ -6,7 +6,7 @@
     <div class="search-event-block" style="background-image:url('{{ asset('images/events-background.jpg') }}')">
       <div class="search-event-block__content">
         <div class="title">
-          <h2>Trouvez un événement près de chez vous !</h2>
+          <h2>TROUVEZ UN ÉVÉNEMENT PRÈS DE CHEZ VOUS !</h2>
         </div>
         <div class="search-event-block__form">
           <p>{{ form_start(concertsSearchForm) }}
@@ -69,7 +69,7 @@
             </div> {# query_events_block #}
           {% else %}
             <div class="noEvent">
-              <p>Il n'y a aucun concert prévu</p>
+              <p>Il n'y a aucun événement prévu</p>
             </div>
           {% endif %}
         </div> {# query END #}
