--- a/templates/concerts/changeConcertDate.html.twig
+++ b/templates/concerts/changeConcertDate.html.twig
@@ -8,7 +8,7 @@
         <div class="title--line"></div>
     </div>
     
-    <h3 class="important-text">{{concert.name}} - <em>{{concert.date | date('d/m/Y à h:i')}}</em></h3>
+    <h3 class="important-text">{{concert.name}} - {{concert.date | date('d/m/Y à h:i')}}</h3>
 
     {{ form_start(newDateForm) }}
         <div class="create-block__form__each--label">
