--- a/templates/security/myAccount.html.twig
+++ b/templates/security/myAccount.html.twig
@@ -3,21 +3,27 @@
 {% block body %}
 
     <div class="main">
-        {% for message in app.flashes('wrongPassword') %}
-            <strong>{{ message }}</strong>
-        {% endfor %}</p>
         <div class="title">
             <h2>{{ app.user.email }}</h2>
             <div class="title--line"></div>
         </div>
-        <ul>
-            <li><a href="{{ path("reservationsList", {'userId': app.user.id}) }}"><i class="fas fa-ticket-alt"></i> Mes réservations</a></li>
+        <div class="account-paramaters-block">
+            <div class="account__each-parameter">
+                <a href="{{ path("reservationsList", {'userId': app.user.id}) }}"><i class="fas fa-ticket-alt"></i><br /> Mes réservations</a>
+            </div>
             {% if app.user and app.user.role == 'Organizer' %}
-                <li><a href="{{ path("myConcertsList", {'userId': app.user.id}) }}"><i class="far fa-list-alt"></i> Mes événements</a></li>
-                <li><a href="{{ path("createConcert")}}"><i class="far fa-calendar-plus"></i> Créer un événement</a></li>
+            <div class="account__each-parameter">
+                <a href="{{ path("myConcertsList", {'userId': app.user.id}) }}"><i class="far fa-list-alt"></i><br />  Mes événements</a>
+            </div>
+            <div class="account__each-parameter">
+                <a href="{{ path("createConcert")}}"><i class="far fa-calendar-plus"></i><br />  Créer un événement</a>
+            </div>
             {% endif %}
-            <li><a href="{{ path('passwordChange', {'userId': app.user.id }) }}"><i class="fas fa-unlock"></i> Modifier mon mot de passe</a></li>
-        </ul>
+            <div class="account__each-parameter">
+                <a href="{{ path('passwordChange', {'userId': app.user.id }) }}"><i class="fas fa-unlock"></i><br />  Modifier mon mot de passe</a>
+            </div>
+        </div>
+
 </div>
 
 {% endblock %}
